unpackaged/main/default/objects/Contact/fields/Astro_Location__c.field-meta.xml
<CustomField>
    <fullName>Astro_Location__c</fullName>
    <label>Astro Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>