unpackaged/main/default/objects/Contact/fields/Prior_Email__c.field-meta.xml
<CustomField>
    <fullName>Prior_Email__c</fullName>
    <description>field to store previous contact email when email changes</description>
    <label>Prior Email</label>
    <type>Email</type>
</CustomField>