unpackaged/main/default/objects/Contact/fields/RCRA_Seminar_Invite__c.field-meta.xml
<CustomField>
    <fullName>RCRA_Seminar_Invite__c</fullName>
    <label>RCRA Seminar Invite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coolidge RCRA</fullName>
            </value>
            <value>
                <fullName>Indy RCRA</fullName>
            </value>
            <value>
                <fullName>Pittsburgh RCRA</fullName>
            </value>
            <value>
                <fullName>Toledo RCRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>