unpackaged/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>true</active>
    <errorConditionFormula>And(
NOT (ISBLANK(Account.Name )),
NOT (MailingPostalCode =  Account.ShippingPostalCode)
)</errorConditionFormula>
    <errorMessage>Contact Zip code does not match Account Zip Code or is blank</errorMessage>
</ValidationRule>